-テーマ、CSS関連
--ui-iconをJavaScriptで生成するよう変更（pub-dist/ui-icon/ 画像ファイルを削除）
--別で読み込んでいた Lightbox.css を削除し、関連画像のロードも減らしました。
--Ver2以前との互換のための画像アイコンを削除。((記法のほうは残してあるので、画像ファイルだけ展開すれば使えます。))
-ドロップダウンメニューの内部仕様を更新しました。
--CSS仕様を整理。
--JavaScriptを使わず中央等の位置調整するように変更。
--いくつかのテーマで表示が崩れていた問題を修正。
-インポートログをボタンの近くに表示するようにしました。
-【テーマ】いくつかのテーマで画像を埋め込み等最適化しました。
-【記法】Ver3.30で削除していたインラインでtargetを指定する記法を再び使用可能にしました。
-【Plugin】設定リセット機能をつけました。
-【Plugin/des_twitter】管理画面で非表示にしました。
-【Fix】HTTP.pmのtypoを修正（[https://adiary.adiary.jp/0410#c1:Thanks to t-hide]）
-【Fix】デザイン編集でタイミングにより二重に初期化してしまうことがある。
-【Fix】月別記事リストのドロップボックス表示時のリンクが正しくない。（Ver3.20以降）
-【Fix】記事一覧画面でログインしていない時もメニューへのリンクが出る。
-【Fix】デフォルトブログでソーシャルアイコン等のリンクが正しくない（[https://adiary.adiary.jp/0410#c7:Thanks to やす]）
-【Fix】【sumomoテーマ】幅480pxのタブレット等で必要な画像が表示されない。
-【Fix】【sumomoテーマ】タブレット等で表示時に、Viewportの設定に失敗する。
-他

*Ver3.30a : 2019/06/30

-[https://adiary.org/v3man/reStructuredText/:reStructuredText]に対応しました。
-[https://adiary.org/v3man/special/sphinx_cms:Sphinx連携機能]が付きました。
-index.htmlをレスポンシブ対応にしました。
-静的HTML出力の設定を変更しました。
-【さつき記法】
--リストやタイトル記法で文字の手前スペースを除去するようにしました。
--relやtargetやdataなどの設定を止めました。
--日時付き見出し記法（*t*記法）を削除しました。((この処理のためにだけに、入力テキストを前処理していました。))
--見出し記法をトップレベル以外では使用できなくしました。
--実装を色々と見直しました。
-記事編集画面
--同時編集ロック機能をリファクタリングしました。
--記法ヘルパーのコードを刷新しました。((いくつかあったバグも直っていると思います))
--編集中の記事タイトルをタイトルに表示するようにしました。
-スマホ表示時のボタンヘルプを無効にしました。
-非公開記事数をカウントしておくよう変更しました。
-jQuery UIの ui-tabs, accordion の使用をやめました。((大して重要ではない割に、CSSの記述を複雑にしていたので除去しました。))
-【Plubin/AMP】大きい画像がはみ出さないように layout="intrinsic" を追加しました。
-【Fix】PostgreSQL/MySQL運用時、外部画像取り込みが動作しない。
-【Fix】画像取り込み時のエラーメッセージがちゃんと表示されない。
-【Fix】システムチェック画面でCryptXの確認が正しくなかった。
-【Fix】index.html内のscriptが動いてなかった。
-【Fix】js や css の強制再読込に失敗する。（[https://github.com/nabe-abk/adiary/issues/6:Thanks to 1484]）
-【Fix】スイッチ表示時のタグ一覧等や「すべてのコメントを読む」のリンクをクリックしても反応がない。
-【Fix/httpd】PATH_INFOに全角文字などを指定できない。((コンテンツkeyに全角文字等を指定すると、記事が開けなくなる。))
-【Fix/記法】QRコード記法が正しく動作しない。（Thanks to jimba）
-【Fix/記法】画像サムネイルでリンク記法のサイズを変更。https対応。